Fix duplicated horizontal scroll bar in nested tables

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,9 @@ textarea {
 .table-limit {
   max-height: 350px;
   overflow-y: auto !important;
+}
+
+.hide-horizontal-of {
   overflow-x: hidden !important;
 }
 
